Fix JEI integration