@@ -1,10 +1,13 @@
 package de.maxhenkel.camera.integration.jei;
 
+import de.maxhenkel.camera.ImageCloningRecipe;
 import de.maxhenkel.camera.Main;
-import de.maxhenkel.camera.RecipeImageCloning;
 import de.maxhenkel.camera.gui.*;
+import de.maxhenkel.corelib.tag.TagUtils;
 import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
+import mezz.jei.api.constants.VanillaTypes;
+import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.extensions.IExtendableRecipeCategory;
 import mezz.jei.api.recipe.category.extensions.vanilla.crafting.ICraftingCategoryExtension;
 import mezz.jei.api.registration.*;
@@ -12,12 +15,12 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.CraftingRecipe;
 
-import java.util.stream.Collectors;
+import java.util.List;
 
 @JeiPlugin
 public class JEIPlugin implements IModPlugin {
 
-    public static final ResourceLocation CATEGORY_TAKE_IMAGE = new ResourceLocation(Main.MODID, "take_image");
+    public static final RecipeType<ItemStack> RECIPE_TYPE_TAKE_IMAGE = RecipeType.create(Main.MODID, "take_image", ItemStack.class);
 
     @Override
     public ResourceLocation getPluginUid() {
@@ -26,7 +29,7 @@ public class JEIPlugin implements IModPlugin {
 
     @Override
     public void registerRecipeCatalysts(IRecipeCatalystRegistration registration) {
-        registration.addRecipeCatalyst(new ItemStack(Main.CAMERA), CATEGORY_TAKE_IMAGE);
+        registration.addRecipeCatalyst(VanillaTypes.ITEM, new ItemStack(Main.CAMERA), RECIPE_TYPE_TAKE_IMAGE);
     }
 
     @Override
@@ -36,22 +39,23 @@ public class JEIPlugin implements IModPlugin {
 
     @Override
     public void registerGuiHandlers(IGuiHandlerRegistration registration) {
-        registration.addGuiScreenHandler(ImageScreen.class, NoJEIGuiProperties::new);
-        registration.addGuiScreenHandler(AlbumScreen.class, NoJEIGuiProperties::new);
-        registration.addGuiScreenHandler(LecternAlbumScreen.class, NoJEIGuiProperties::new);
-        registration.addGuiScreenHandler(ResizeFrameScreen.class, NoJEIGuiProperties::new);
-        registration.addGuiScreenHandler(CameraScreen.class, NoJEIGuiProperties::new);
+//        registration.addGuiScreenHandler(ImageScreen.class, NoJEIGuiProperties::new);
+//        registration.addGuiScreenHandler(AlbumScreen.class, NoJEIGuiProperties::new);
+//        registration.addGuiScreenHandler(LecternAlbumScreen.class, NoJEIGuiProperties::new);
+//        registration.addGuiScreenHandler(ResizeFrameScreen.class, NoJEIGuiProperties::new);
+//        registration.addGuiScreenHandler(CameraScreen.class, NoJEIGuiProperties::new);
     }
 
     @Override
     public void registerRecipes(IRecipeRegistration registration) {
-        registration.addRecipes(Main.SERVER_CONFIG.cameraConsumeItem.getAll().stream().map(item -> new ItemStack(item, Main.SERVER_CONFIG.cameraConsumeItemAmount.get())).collect(Collectors.toList()), CATEGORY_TAKE_IMAGE);
+        List<ItemStack> paper = TagUtils.getItemTag(Main.IMAGE_PAPER.location()).getAll().stream().map(ItemStack::new).toList();
+        registration.addRecipes(RECIPE_TYPE_TAKE_IMAGE, paper);
     }
 
     @Override
     public void registerVanillaCategoryExtensions(IVanillaCategoryExtensionRegistration registration) {
         IExtendableRecipeCategory<CraftingRecipe, ICraftingCategoryExtension> craftingCategory = registration.getCraftingCategory();
-        craftingCategory.addCategoryExtension(RecipeImageCloning.class, ImageCopyExtension::new);
+        craftingCategory.addCategoryExtension(ImageCloningRecipe.class, ImageCloneExtension::new);
     }
 
 }
